--- a/index.html
+++ b/index.html
@@ -156,67 +156,129 @@
                 </svg>
               </button>
             </div>
-            
-
           </div>
           <div class="popular-bottom">
-              <!-- course 1 -->
-              <div class="course-item">
-                <a href="#!"><img src="./assets/img/course1.jpg" alt="Basic web design" class="thumb"></a>
-                <div class="info">
-                  <div class="head">
-                    <h3 class="title"><a href="#!">Basic web design</a></h3>
-                    <div class="rating">
-                      <img src="./assets/icon/star.svg" alt="star" class="star">
-                      <span class="value">4.5</span>
-                    </div>
-                  </div>
-                  <div class="desc">Get the best course, gain knowledge and shine for your future career.</div>
-                  <div class="foot">
-                    <span class="price">$120.75</span>
-                    <button class="btn btn-book">Book Now</button>
-                  </div>
-                </div>
-              </div>
-              <!-- course 2 -->
-              <div class="course-item">
-                <a href="#!"><img src="./assets/img/course2.jpg" alt="UI/UX design" class="thumb"></a>
-                <div class="info">
-                  <div class="head">
-                    <h3 class="title"> <a href="#1">UI/UX design</a></h3>
-                    <div class="rating">
-                      <img src="./assets/icon/star.svg" alt="star" class="star">
-                      <span class="value">4.5</span>
-                    </div>
-                  </div>
-                  <div class="desc">Get the best course, gain knowledge and shine for your future career.</div>
-                  <div class="foot">
-                    <span class="price">$120.75</span>
-                    <button class="btn btn-book">Book Now</button>
+            <!-- course 1 -->
+            <div class="course-item">
+              <a href="#!"
+                ><img
+                  src="./assets/img/course1.jpg"
+                  alt="Basic web design"
+                  class="thumb"
+              /></a>
+              <div class="info">
+                <div class="head">
+                  <h3 class="title">
+                    <a class="line-clamp break-all" href="#!"
+                      >Basic web design</a
+                    >
+                  </h3>
+                  <div class="rating">
+                    <img src="./assets/icon/star.svg" alt="star" class="star" />
+                    <span class="value">4.5</span>
                   </div>
                 </div>
-              </div>
-              <!-- course 3 -->
-               <div class="course-item">
-                <a href="#!"><img src="./assets/img/course3.jpg" alt="Web App design" class="thumb"></a>
-                <div class="info">
-                  <div class="head">
-                    <h3 class="title"><a href="#!">Web App design</a></h3>
-                    <div class="rating">
-                      <img src="./assets/icon/star.svg" alt="star" class="star">
-                      <span class="value">4.5</span>
-                    </div>
-                  </div>
-                  <div class="desc">Get the best course, gain knowledge and shine for your future career.</div>
-                  <div class="foot">
-                    <span class="price">$120.75</span>
-                    <button class="btn btn-book">Book Now</button>
-                  </div>
+                <div>
+                  <p class="desc line-clamp line-2 break-all">
+                    Get the best course, gain knowledge and shine for your
+                    future career.
+                  </p>
+                </div>
+                <div class="foot">
+                  <span class="price">$120.75</span>
+                  <button class="btn btn-book">Book Now</button>
                 </div>
               </div>
             </div>
+            <!-- course 2 -->
+            <div class="course-item">
+              <a href="#!"
+                ><img
+                  src="./assets/img/course2.jpg"
+                  alt="UI/UX design"
+                  class="thumb"
+              /></a>
+              <div class="info">
+                <div class="head">
+                  <h3 class="title">
+                    <a class="line-clamp break-all" href="#1">UI/UX design</a>
+                  </h3>
+                  <div class="rating">
+                    <img src="./assets/icon/star.svg" alt="star" class="star" />
+                    <span class="value">4.5</span>
+                  </div>
+                </div>
+                <div>
+                  <p class="desc line-clamp line-2 break-all">
+                    Get the best course, gain knowledge and shine for your
+                    future career.
+                  </p>
+                </div>
+                <div class="foot">
+                  <span class="price">$120.75</span>
+                  <button class="btn btn-book">Book Now</button>
+                </div>
+              </div>
+            </div>
+            <!-- course 3 -->
+            <div class="course-item">
+              <a href="#!"
+                ><img
+                  src="./assets/img/course3.jpg"
+                  alt="Web App design"
+                  class="thumb"
+              /></a>
+              <div class="info">
+                <div class="head">
+                  <h3 class="title">
+                    <a class="line-clamp" href="#!">Web App design</a>
+                  </h3>
+                  <div class="rating">
+                    <img src="./assets/icon/star.svg" alt="star" class="star" />
+                    <span class="value">4.5</span>
+                  </div>
+                </div>
+                <div>
+                  <p class="desc line-clamp line-2 break-all">
+                    Get the best course, gain knowledge and shine for your
+                    future career.
+                  </p>
+                </div>
+                <div class="foot">
+                  <span class="price">$120.75</span>
+                  <button class="btn btn-book">Book Now</button>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
+      <!-- feedback -->
+       <div class="feedback">
+          <div class="main-content">
+            <div class="feedback-list">
+              <div class="feedback-items">
+                <!-- left -->
+                <div class="info">
+                  <img src="./assets/img/kang.jpg" alt="Cao Minh Quang" class="avatar">
+                  <p class="name">Cao Minh Quang</p>
+                  <p class="desc">Student of University of Infomation Technology</p>
+                  <div class="dots-list">
+                    <span class="dots"></span>
+                    <span class="dots dot2"></span>
+                    <span class="dots"></span>
+                  </div>
+                </div>
+                <!-- right -->
+                <div class="content">
+                  <img src="./assets/icon/quotes.svg" alt="quotes" class="open-quotes">
+                  <blockquote>Not only does my resume look impressive—filled with the names and logos of world-class institutions—but these certificates also bring me closer to my career goals by validating the skills I've learned."</blockquote>
+                </div>  
+              </div>
+            </div>
+          </div>
+        </div>
+       </div>
     </main>
   </body>
 </html>
