--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Document</title>
   </head>
-  <body style="height: 10000px">
+  <!-- <body style="height: 10000px"> -->
     <!-- header -->
     <header class="header fixed">
       <div class="main-content">
@@ -231,7 +231,7 @@
               <div class="info">
                 <div class="head">
                   <h3 class="title">
-                    <a class="line-clamp" href="#!">Web App design</a>
+                    <a class="line-clamp break-all" href="#!">Web App design</a>
                   </h3>
                   <div class="rating">
                     <img src="./assets/icon/star.svg" alt="star" class="star" />
@@ -254,31 +254,197 @@
         </div>
       </div>
       <!-- feedback -->
-       <div class="feedback">
-          <div class="main-content">
-            <div class="feedback-list">
-              <div class="feedback-items">
-                <!-- left -->
-                <div class="info">
-                  <img src="./assets/img/kang.jpg" alt="Cao Minh Quang" class="avatar">
-                  <p class="name">Cao Minh Quang</p>
-                  <p class="desc">Student of University of Infomation Technology</p>
-                  <div class="dots-list">
-                    <span class="dots"></span>
-                    <span class="dots dot2"></span>
-                    <span class="dots"></span>
-                  </div>
+      <div class="feedback">
+        <div class="main-content">
+          <div class="feedback-list">
+            <div class="feedback-items">
+              <!-- left -->
+              <div class="info">
+                <img
+                  src="./assets/img/kang.jpg"
+                  alt="Cao Minh Quang"
+                  class="avatar"
+                />
+                <p class="name">Cao Minh Quang</p>
+                <p class="desc">
+                  Student of University of Infomation Technology
+                </p>
+                <div class="dots-list">
+                  <span class="dots"></span>
+                  <span class="dots dot2"></span>
+                  <span class="dots"></span>
                 </div>
-                <!-- right -->
-                <div class="content">
-                  <img src="./assets/icon/quotes.svg" alt="quotes" class="open-quotes">
-                  <blockquote>Not only does my resume look impressive—filled with the names and logos of world-class institutions—but these certificates also bring me closer to my career goals by validating the skills I've learned."</blockquote>
-                </div>  
+              </div>
+              <!-- right -->
+              <div class="content">
+                <img
+                  src="./assets/icon/quotes.svg"
+                  alt="quotes"
+                  class="open-quotes"
+                />
+                <blockquote>
+                  Not only does my resume look impressive—filled with the names
+                  and logos of world-class institutions—but these certificates
+                  also bring me closer to my career goals by validating the
+                  skills I've learned."
+                </blockquote>
               </div>
             </div>
           </div>
         </div>
-       </div>
+      </div>
+      <!-- feature -->
+      <div class="feature">
+        <div class="main-content">
+          <div class="item">
+            <div class="pic">
+              <img
+                class="picture picture1"
+                src="./assets/img/feature1.jpg"
+                alt="feature picture"
+              />
+              <img
+                class="picture picture2"
+                src="./assets/img/feature2.jpg"
+                alt="feature picture"
+              />
+            </div>
+            <div class="info">
+              <h2 class="heading-lv2">
+                Learner outcomes through our awesome platform
+              </h2>
+              <p class="desc">
+                87% of people learning for professional development report
+                career benefits like getting a promotion, a raise, or starting a
+                new career.
+              </p>
+              <p class="desc">Lesson Impact Report (2022)</p>
+              <button class="btn btn-feature">Sign Up</button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- feature2 -->
+      <div class="feature2">
+        <div class="main-content">
+          <div class="item">
+            <div class="info">
+              <h2 class="heading-lv2">
+                Take the next step toward your personal and professional goals
+                with Lesson.
+              </h2>
+              <p class="desc">
+                Take the next step toward. Join now to receive personalized and
+                more recommendations from the full Coursera catalog.
+              </p>
+              <button class="btn btn-feature">Sign Up</button>
+            </div>
+            <div class="pic">
+              <img
+                class="picture"
+                src="./assets/img/feature3.jpg"
+                alt="feature picture"
+              />
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- blog -->
+      <div class="blog">
+        <div class="main-content">
+          <!-- blog-top -->
+          <div class="blog-top">
+            <h2 class="heading-lv2">Our blog</h2>
+            <p class="desc">
+              Read our regular travel blog and know the latest update of tour
+              and travel
+            </p>
+          </div>
+
+          <!-- blog-bottom -->
+          <div class="blog-bottom">
+            <!-- item 1 -->
+            <div class="item">
+              <a href="#!"><img src="./assets/img/blog1.jpg" alt="" class="thumb" /></a>
+              <div class="info">
+                <span class="date">21 November 2021</span>
+                <h3 class="title">
+                  <a class="line-clamp line-2 break-all" href="#!">How to become a pro web designer in 2022 and get remot job?</a>
+                </h3>
+                <a href="" class="btn btn-blog">Read More</a>
+              </div>
+            </div>
+            <!-- item 2 -->
+            <div class="item">
+              <a href="#!"><img src="./assets/img/blog2.jpg" alt="" class="thumb" /></a>
+              <div class="info">
+                <span class="date">21 November 2021</span>
+                <h3 class="title">
+                  <a class="line-clamp line-2 break-all" href="#!">How to become a pro web designer in 2022 and get remot job?</a>
+                </h3>
+                <a href="" class="btn btn-blog">Read More</a>
+              </div>
+            </div>
+            <!-- item 3 -->
+            <div class="item">
+              <a href="#!"><img src="./assets/img/blog3.jpg" alt="" class="thumb" /></a>
+              <div class="info">
+                <span class="date">21 November 2021</span>
+                <h3 class="title">
+                  <a class="line-clamp line-2 break-all" href="#!">How to become a pro web designer in 2022 and get remot job?</a>
+                </h3>
+                <a href="" class="btn btn-blog">Read More</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="dots-list">
+            <span class="dots"></span>
+            <span class="dots dot2"></span>
+            <span class="dots"></span>
+          </div>
+        </div>
+      </div>
+      <!-- footer -->
+      <div class="footer">
+        <div class="main-content">
+          <!-- footer-top -->
+          <div class="footer-top">
+            <div class="item">
+              <img src="./assets/img/lesson-w.svg" alt="lesson">
+              <p class="desc">Need to help for your dream Career? trust us. With Lesson, study becomes a lot easier with us.</p>
+              <div class="icon">
+                <a href=""><img class="logo" src="./assets/icon/twitter.svg" alt=""></a>
+                <a href=""><img class="logo" src="./assets/icon/f.svg" alt=""></a>
+                <a href=""><img class="logo" src="./assets/icon/linked_in.svg" alt=""></a>
+                <a href=""><img class="logo" src="./assets/icon/instagram.svg" alt=""></a>
+              </div>
+            </div>
+            <div class="item">
+              <p class="header-footer">Company</p>
+              <a href=""><p class="info">Features</p></a>
+              <a href=""><p class="info">Features</p></a>
+              <a href=""><p class="info">Our Pricing</p></a>
+              <a href=""><p class="info">Latest News</p></a>
+            </div>
+            <div class="item">
+              <p class="header-footer">Support</p>
+              <a href=""><p class="info">FAQ’s</p></a>
+              <a href=""><p class="info">Terms & Conditions</p></a>
+              <a href=""><p class="info">Privacy Policy</p></a>
+              <a href=""><p class="info">Contact Us</p></a>
+            </div>
+            <div class="item">
+              <p class="header-footer">Address</p>
+              <p class="info"><strong>Location:</strong> 27 Division St, New York, NY 10002, USA</p>
+              <p class="info"><strong>Email:</strong> email@gmail.com</p>
+              <p class="info"><strong>Phone:</strong> + 000 1234 567 890</p>
+            </div>
+          </div>
+          <!-- footer-bottom -->
+          <p class="Copyright">Copyright ©2025 kang.com All rights reserved</p>
+        </div>
+      </div>
     </main>
   </body>
 </html>
